trying to fix spacing on body on small size screens.

--- a/style/main.css
+++ b/style/main.css
@@ -56,6 +56,9 @@ header {
 .img320px, .xl-pic, .bw-pic{
     display: none;
 }
+body{
+   overflow: hidden;
+}
 
 
 header img {
@@ -87,6 +90,7 @@ h1 {
     text-align: center;
     text-transform: uppercase;
     color: rgba(255,255,255,0.6);
+    overflow: hidden;
 
 }
 
@@ -104,6 +108,7 @@ header h3 {
     width: 100%;
     text-align: center;
     text-transform: uppercase;
+    overflow: hidden;
 }
 
 
